# natural-language-processing-techniques-for-email-classification

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_pipeline.yml
models/: sentiment.joblib
src/: clean_and_annotate.py  form_ingest.py  llm_generate_replies.py  merge_messages.py  postprocessing.py  predict.py  preprocessing.py  send_to_slack_bot.py  train_sentiment.py
