[project]
name = "text-classification-project-using-natural-language-processing-techniques"
version = "0.1.0"
description = "Pipeline para classificação e triagem de e-mails usando NLP e LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "python-dotenv>=0.21",
    "requests>=2.28",
    "tqdm>=4.65",
    "scikit-learn>=1.8",
    "joblib>=1.2",
    "spacy>=3.5",
    "dateparser>=1.1",
    "slack-sdk>=3.19",
    "tenacity>=8.2",
    "pytest>=7.2",
    "openai>=1.0",
]
